# gbacalc

./: Cargo.toml  README.md
gfx/: sprites.aseprite
src/: lib.rs  main.rs  mathengine.rs  ui.rs
src/display/: display.rs
src/mathengine/: core.rs  error.rs  math_function.rs  solve.rs  token.rs  validate.rs
src/ui/: calculator.rs  core.rs
src/ui/calculator/: calc_ui.rs
