[package]
name = "gbacalc"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.19.1"
libm = "0.2.8"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
